<resources>
    <string name="app_name">CurrencyConverter</string>

    <!---Error Strings-->

    <string name="error_occured">An error has occurred, please try again later</string>
    <string name="error_network_error">Please check your internet connection</string>
    <string name="wrong_format">Please use correct format</string>

    <!---View Strings-->

    <string name="enter_currency_from">From</string>
    <string name="enter_currency_to">To</string>
    <string name="enter_amount">Enter amount</string>
    <string name="converted_amount">Final amount</string>
    <string name="get_rates">Get rates</string>
    <string name="select_currency">Select currency</string>
    <string name="please_download_rates">Please check your internet connection and download rates</string>

</resources>
